--- a/students/templates/students/students_list.html
+++ b/students/templates/students/students_list.html
@@ -1,57 +1,13 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-  <meta charset="UTF-8"/>
-  <title>Сервіс Обліку Студентів</title>
-  <meta name="description" value="Система Обліку Студентів Навчального Закладу" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends "students/base.html" %}
 
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/bootstrap/3.3.0/css/bootstrap.min.css">
-  <link rel="stylesheet"
-        href="/static/css/main.css">
-</head>
-<body>
+{% load static from staticfiles%}
 
-  <!-- Start Container -->
-  <div class="container">
+{% block meta_title %} Студенты {% endblock meta_title %}
 
-    <!-- Start Header -->
-    <div class="row" id="header">
-      <div class="col-xs-8">
-        <h1>Сервіс Обліку Студентів</h1>
-      </div>
-      <div class="col-xs-4" id="group-selector">
-        <strong>Група:</strong>
-        <select>
-          <option value="">Усі Студенти</option>
-          <option value="">Мтм-21, Віталій Подоба</option>
-          <option value="">Мтм-22, Андрій Петров</option>
-        </select>
-      </div>
-    </div>
-    <!-- End Header -->
+{% block title %} База Студентов {% endblock title %}
 
-    <!-- Start subheader -->
-    <div class="row" id="sub-header">
-      <div class="col-xs-12">
-        <ul class="nav nav-tabs" role="tablist">
-          <li role="presentation" class="active"><a href= {% url "home"%}>Студенти</a></li>
-          <li role="presentation"><a href="/juornal">Відвідування</a></li>
-          <li role="presentation"><a href={% url "groups"%}>Групи</a></li>
-        </ul>
-      </div>
-    </div>
-    <!-- End subheader -->
-
-    <!-- Start Content Columns -->
-    <div class="row" id="content-columns">
-      <div class="col-xs-12" id="content-column">
-
-        <div class="alert alert-warning" role="alert">Студент успішно доданий.</div>
-
-        <h2>База Студентів</h2>
-        <a href = {%url "students_add" %} class="btn btn-primary">Додати Студента</a>
+{% block content %}
+<a href = "{% url "students_add" %}" class="btn btn-primary"> Add Student </a>
 
         <!-- Start Students Listing -->
         <table class="table">
@@ -66,12 +22,13 @@
             </tr>
           </thead>
           <tbody>
+          {% for student in students %}
             <tr>
-              <td>1</td>
-              <td><img class="img-circle" src="/static/img/podoba3.jpg" height="30" width="30" /></td>
-              <td><a href= {% url "students_edit" 123 %}>Корост</a></td>
-              <td><a href={% url "students_edit" 123 %}>Андрій</a></td>
-              <td>123</td>
+              <td>{{ forloop.counter }}</td>
+              <td><img class="img-circle" src="{% static student.image %}" height="30" width="30" /></td>
+              <td><a href= {% url "students_edit" student.id%}">{{ student.last_name}}</a></td>
+              <td><a href={% url "students_edit" student.id %}>{{student.first_name}}</a></td>
+              <td>{{student.ticket}}</td>
               <td>
                 <div class="btn-group">
                   <button type="button" class="btn btn-default dropdown-toggle"
@@ -79,53 +36,14 @@
                     <span class="caret"></span>
                   </button>
                   <ul class="dropdown-menu" role="menu">
-                    <li><a href={% url "students_edit" 123 %}>Редагувати</a></li>
+                    <li><a href={% url "students_edit" student.id %}>Редагувати</a></li>
                     <li><a href="/journal/1">Відвідування</a></li>
-                    <li><a href={% url "students_delete" 123 %}>Видалити</a></li>
+                    <li><a href={% url "students_delete" student.id %}>Видалити</a></li>
                   </ul>
                 </div>
               </td>
             </tr>
-            <tr>
-              <td>2</td>
-              <td><img class="img-circle" src="/static/img/me.jpeg" height="30" width="30" /></td>
-              <td><a href={% url "students_edit" 254 %}>Подоба</a></td>
-              <td><a href={% url "students_edit" 254 %}>Віталій</a></td>
-              <td>254</td>
-              <td>
-                <div class="btn-group">
-                  <button type="button" class="btn btn-default dropdown-toggle"
-                          data-toggle="dropdown">Дія
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href={% url "students_edit" 254 %}>Редагувати</a></li>
-                    <li><a href="/juornal/2">Відвідування</a></li>
-                    <li><a href={% url "students_delete" 254 %}>Видалити</a></li>
-                  </ul>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td><img class="img-circle" src="/static/img/piv.png" height="30" width="30" /></td>
-              <td><a href={% url "students_edit" 5332 %}>Притула</a></td>
-              <td><a href={% url "students_edit" 5332 %}>Тарас</a></td>
-              <td>5332</td>
-              <td>
-                <div class="btn-group">
-                  <button type="button" class="btn btn-default dropdown-toggle"
-                          data-toggle="dropdown">Дія
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href={% url "students_edit" 5332 %}>Редагувати</a></li>
-                    <li><a href="/journal/3">Відвідування</a></li>
-                    <li><a href={% url "students_delete" 5332 %}>Видалити</a></li>
-                  </ul>
-                </div>
-              </td>
-            </tr>
+          {% endfor %}
           </tbody>
         </table>
         <!-- End Students Listing -->
@@ -142,23 +60,4 @@
           </ul>
         </nav>
 
-      </div>
-    </div>
-    <!-- End Content Columns -->
-
-    <!-- Start Footer -->
-    <div class="row" id="footer">
-      <div class="col-xs-12">
-        &copy; 2014 Сервіс Обліку Студентів
-      </div>
-    </div>
-    <!-- End Footer -->
-
-  </div>
-  <!-- End Container -->
-
-  <!-- Javascripts Inclusion -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-</body>
-</html>
+{% endblock content %}
