--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -1,18 +1,17 @@
 {% load static from staticfiles%}
-
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="uk">
 <head>
   <meta charset="UTF-8"/>
   <title>Сервіс Обліку Студентів - {% block meta_title%}{% endblock meta_title%}</title>
   <meta name="description" value="Система Обліку Студентів Навчального Закладу" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/bootstrap/3.3.0/css/bootstrap.min.css">
   <link rel="stylesheet"
-        href="{{ PORTAL_URL }}{% static "css/main.css" %}">
+        href="{{ PORTAL_URL }}{% static 'css/main.css' %}">
 
   {% block extra_css %}{% endblock extra_css %}
 </head>
@@ -52,9 +51,12 @@
     <!-- Start Content Columns -->
     <div class="row" id="content-columns">
       <div class="col-xs-12" id="content-column">
-        {% comment "Not used alert so far" %}
-        <div class="alert alert-warning" role="alert">Status Update! </div>
-        {% endcomment %}
+        {% block status_message %}
+        {% if request.GET.status_message %}
+        <div class="alert alert-warning" role="alert">{{ request.GET.status_message }} </div>
+        {% endif %}
+        {% endblock status_message %}
+
         <h2>{% block title %} {% endblock title %}</h2>
         {% block content %} {% endblock content %}
 
@@ -76,6 +78,9 @@
 
   <!-- Javascripts Inclusion -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/bootstrap/3.3.0/js/bootstrap.min.js"></script>
   {% block extra_js %}{% endblock extra_js %}
 </body>
